--- a/css/single-product.css
+++ b/css/single-product.css
@@ -206,14 +206,27 @@ body {
     background-color: #e0e0e0;
 }
 
-.quantity-display {
+.quantity {
+    display: none !important;
+}
+
+.quantity-input {
+    width: 10vh;
     text-align: center;
     font-size: 16px;
-    padding: 0.25rem 1rem;
+    padding: 0.25rem 0.2rem;
     border: 1px solid #cacaca;
     font-weight: 900;
     color: #404040;
     margin: 0 0.2rem;
+    -moz-appearance: textfield;
+    appearance: textfield;
+}
+
+.quantity-input::-webkit-outer-spin-button,
+.quantity-input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 /* Miscellaneous */
@@ -438,19 +451,16 @@ details[open] .collapsible-content {
 .custom-address,
 .colorfretegeral {
     color: #555;
-    font-weight: 500;
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    text-wrap: wrap;
+    text-align: start;
 }
 
 .colorfretegeral {
     font-size: 16px;
     margin-top: 10px;
-}
-
-#location {
-    font-weight: 600;
 }
 
 /* Installments Content */
