--- a/css/footer.css
+++ b/css/footer.css
@@ -1,17 +1,20 @@
 .footer-container {
     display: flex;
     justify-content: center;
-    background-color: #3b3752;
+    background-color: #232F3E;
     color: white;
-    border-top: 0.5vh solid;
+    border-top: 0.4vh solid;
     border-image: linear-gradient(to right, blue, red, yellow) 1;
     padding-top: 5rem;
 }
 
 .footer-content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
     justify-content: center;
-    width: 100rem;
-    max-width: 100%;
+    align-items: center;
 }
 .footer-up  {
     display: flex;
@@ -19,6 +22,7 @@
     justify-content: space-between;
     align-items: flex-start;
     padding-bottom: 6rem;
+    width: 100rem;
 } 
 
 
@@ -59,8 +63,11 @@ color: #ffffff99;
     flex-direction: column;
     align-items: center;
     padding: 1rem;
-    border-top: 1px solid #ffffff50;
+    border-top: 0.1vh solid #ffffff30;
+    width: 100%;
+    background-color: #131A22;
 }
+
 .footer-down img {
     width: 3rem;
     margin: 1rem 0.1rem 0 0.1rem;
