--- a/css/header.css
+++ b/css/header.css
@@ -4,9 +4,10 @@
     justify-content: center;
     align-items: center;
     padding: 20px;
-    background-color: white;
-    border-bottom: 0.5vh solid;
+    background-color: #232F3E;
+    border-bottom: 0.4vh solid;
     height: 7rem;
+    color: #fff;
     border-image: linear-gradient(to right, yellow, red, blue) 1;
 }
 
@@ -16,10 +17,11 @@
     align-items: center;
     width: 100rem;
     max-width: 100%;
+    font-weight: 800;
 }
 
 .header-left img {
-    max-width: 8rem;
+    max-width: 12rem;
 }
 
 .header-center nav ul {
@@ -36,7 +38,7 @@
 .header-center nav ul li a {
     text-decoration: none;
     color: inherit;
-    font-weight: 500;
+    font-weight: 700;
     font-size: large;
 }
 
@@ -57,10 +59,12 @@
 }
 
 .header-right .search-submit {
-    background: none;
+    background: #ffffff50;
     border: none;
+    color: white;
     cursor: pointer;
     margin-left: 5px;
+    padding: 0;
 }
 
 .header-right .cart-button {
@@ -68,7 +72,7 @@
     align-items: center;
     margin-left: 15px;
     text-decoration: none;
-    color: #333;
+    color: #fff;
     position: relative;
 }
 
@@ -77,20 +81,20 @@
 }
 
 .header-right .cart-count {
-    margin-left: 5px;
-    font-size: 0.9rem;
+    font-size: 1rem;
     background-color: #0000ff;
     color: white;
     border-radius: 100%;
-    width: 1.3rem;
-    height: 1.3rem;
+    min-width: 1.5rem;
     font-weight: 600;
     position: absolute;
-    left: 1rem;
+    left: 0.8rem;
     bottom: 0.8rem;
+    padding:  0.1rem 0.2rem;
     text-align: center;
     align-content: center;
 }
+
 
 /* Estilos responsivos para dispositivos móveis */
 @media (max-width: 802px) {
