--- a/css/front-page.css
+++ b/css/front-page.css
@@ -1,245 +1,358 @@
+body {
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(135deg, #eee 0%, #eaeaea 100%);
+  overflow-x: hidden;
+  position: relative;
+}
+
 main {
-    display: flex;
-    justify-content: center;
-    background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
 }
 
 #best-sellers,
 #categories,
 #weekly-deals {
-    position: relative;
+  position: relative;
 }
 
 .front-page-content {
-    display: flex;
-    flex-direction: column;
-    width: 100rem;
-    max-width: 100%;
-    flex-wrap: nowrap;
-    background-color: #f5f5f5;
-    margin: 0;
-    z-index: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100rem;
+  max-width: 100%;
+  flex-wrap: nowrap;
+  margin: 0;
+  z-index: 0;
 }
 
 .final-banner-container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .final-banner-container img {
-    width: 120rem;
-    max-width: 100%;
+  width: 120rem;
+  max-width: 100%;
 }
 
 .slide-container {
-    position: relative;
-    margin: auto;
-    overflow: hidden;
-    border-radius: 1rem;
+  position: relative;
+  margin: auto;
+  overflow: hidden;
 }
 
 .slides {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
 }
 
 .slide {
-    display: none;
+  display: none;
 }
 
 .slide img {
-    width: 100rem;
-    max-width: 100%;
-    vertical-align: middle;
+  width: 100rem;
+  max-width: 100%;
+  vertical-align: middle;
 }
 
 .fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
 
 @keyframes fade {
-    from {opacity: 0.4} 
-    to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .dots {
-    text-align: center;
-    position: absolute;
-    bottom: 10px;
-    width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
 }
 
 .dot {
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
 
 .active {
-    background-color: #717171;
+  background-color: #717171;
 }
 
 #best-sellers h1,
 #categories h1,
 #weekly-deals h1 {
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
-    margin-top: 1.5rem;
-    margin-left: 3rem;
-    color: #ffffff;
-    background-color: #00000040;
-    padding: 1rem 2rem 0.4rem 2rem;
-    border-radius: 1rem 1rem 0 0;
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1.5rem;
+  margin-left: 1rem;
+  color: #ffffff;
+  background-color: #60606050;
+  padding: 1rem 2rem 0.4rem 2rem;
+  border-radius: 1rem 1rem 0 0;
+  border-top: 1px solid #bbbbbb50;
+  border-left: 1px solid #bbbbbb50;
+  border-right: 1px solid #bbbbbb50;
+  text-shadow: 2px 3px 2px #60606020;
 }
 
 .slider-buttons {
-    position: relative;
-    width: 100%;
-    z-index: 9999;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.5s;
+  position: relative;
+  width: 100%;
+  z-index: 9999;
+  pointer-events: none;
+  transition: opacity 0.5s;
 }
 
 .button-container.prev-button-container {
-    justify-content: start;
-    pointer-events: none;
-    position: absolute;
-    left: 0;
-    bottom: 11rem;
+  justify-content: start;
+  pointer-events: none;
+  position: absolute;
+  left: 0;
+  bottom: 11rem;
 }
 
 .button-container.next-button-container {
-    justify-content: end;
-    pointer-events: none;
-    position: absolute;
-    right: 0;
-    bottom: 11em;
+  justify-content: end;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+  bottom: 11em;
 }
 
 .slider-buttons button {
-    padding: 0.5rem 1rem;
-    background-color: rgba(31, 31, 31, 0.95);
-    color: white;
-    border: none;
-    cursor: pointer;
-    transition: opacity 0.3s;
-    border-radius: 100%;
-    display: none;
-    pointer-events: all;
-    box-shadow: 0 0 0.5vh 0.3vh #ffffff50;
-}
-
-.slider-buttons button:hover {
-    opacity: 1;
+  position: relative;
+  background: #ffffff00;
+  border: none;
+  cursor: pointer;
+  transition: opacity 0.3s;
+  border-radius: 100%;
+  display: block;
+  pointer-events: all;
 }
 
 .category-block:hover .slider-buttons {
-    opacity: 1; /* Mostra os botões ao passar o mouse */
+  opacity: 1; /* Mostra os botões ao passar o mouse */
 }
 
 .prevButton::before {
-    content: '\25C0'; /* Unicode para seta esquerda */
-    font-size: 1.5rem;
+  color: #707070;
+  content: "\276E";
+  font-size: 2rem;
+  display: block;
+  background-color: #fafafa;
+  border: 1px solid #bbbbbb50;
+  border-radius: 0 100% 100% 0;
+  padding-top: 0.2rem;
+  width: 2.5rem;
+  height: 3rem;
+  transition: background-color 0.3s ease;
 }
 
 .nextButton::before {
-    content: '\25B6'; /* Unicode para seta direita */
-    font-size: 1.5rem;
+  color: #707070;
+  content: "\276F";
+  font-size: 2rem;
+  display: block;
+  background-color: #fafafa;
+  border: 1px solid #bbbbbb50;
+  border-radius: 100% 0 0 100%;
+  padding-top: 0.2rem;
+  width: 2.5rem;
+  height: 3rem;
+  transition: background-color 0.2s ease, transform 0.2s ease;
+}
+
+.prevButton:active::before,
+.nextButton:active::before {
+  background-color: #eaeaea;
+  transform: scale(1.1);
 }
 
 .woocommerce.columns-4 {
-    display: flex;
-    flex-wrap: nowrap;
-    overflow-x: hidden;
-    padding: 1.5rem 0 1.5rem 0;
-    background-color: #fafafa;
-    border: 1px solid #dadada;
-    border-radius: 1rem;
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: hidden;
+  padding: 1.5rem 0 1.5rem 0;
+  background-color: #ffffff70;
+  border: 1px solid #bbbbbb50;
+  border-radius: 1rem;
 }
 
 .woocommerce.columns-4 .products {
-    display: flex;
-    flex-wrap: nowrap;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    overflow-x: hidden; 
-    padding: 0 2rem;
+  display: flex;
+  flex-wrap: nowrap;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  overflow-x: hidden;
+  padding: 0;
+  gap: 2rem;
 }
 
 .woocommerce.columns-4 .products .product {
-    flex: 0 0 auto;
-    width: 250px;
-    height: 400px;
-    margin-right: 1.5rem;
-    margin-bottom:1rem;
-    margin-top: 1rem;
-    background-color: #fff;
-    border-radius: 1rem;
-    box-shadow: 0 0.2rem 0.2rem 0.2rem #60606015;
-    transition: box-shadow 0.3s;
-    text-align: center;
-    overflow: hidden;
-    z-index: 9999;
+  flex: 0 0 auto;
+  width: 20vw; /* 23% da largura da viewport */
+  max-width: 23rem;
+  height: auto;
+  margin-right: 0;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  background-color: #fff;
+  border-radius: 1rem;
+  box-shadow: 0 0 3px 0 #bbbbbb90;
+  transition: box-shadow 0.3s, transform 0.2s;
+  text-align: center;
+  overflow: hidden;
+  z-index: 9999;
+}
+
+.woocommerce.columns-4 .products .product:hover {
+  transform: translateY(-0.2rem);
 }
 
 .woocommerce.columns-4 .products .product img {
-    width: 80%;
-    height: auto;
-    margin-top: 1.5rem;
-    display: inline;
+  width: 80%;
+  height: auto;
+  margin-top: 1.5rem;
+  display: inline;
 }
 
 .woocommerce ul.products li.product .woocommerce-loop-product__title {
-    padding: .5em 0;
-    font-size: 1em;
-    text-align: left;
-    margin: 0 1.5rem;
-    color: #606060;
+  padding: 0.5em 0;
+  font-size: 1em;
+  text-align: left;
+  margin: 0 1.5rem;
+  color: #606060;
 }
 
 .woocommerce.columns-4 .products .product .price {
-    margin-left: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
+  margin-left: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
 }
 
 .woocommerce ul.products li.product .price del {
-    color: #909090;
-    opacity: 0.9;
-    font-size: 1rem;
-    font-weight: 500;
-  }
-
-.woocommerce.columns-4 .products .product .onsale {
-    position: absolute;
-    right: 1rem;
-    top: 1rem;
-    display: none;
+  color: #909090;
+  opacity: 0.9;
+  font-size: 1rem;
+  font-weight: 500;
 }
 
-.woocommerce ul.products li.product .price ins, .woocommerce ul.products li.product .price {
-    color: #00ab66;
+.woocommerce.columns-4 .products .product .onsale {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  display: none;
+}
+
+.woocommerce ul.products li.product .price ins,
+.woocommerce ul.products li.product .price {
+  color: #00ab66;
   text-decoration: none;
   font-size: 1.15rem;
   font-weight: 600;
 }
 
 .woocommerce.columns-4 .products .product .button {
-    display: none;
+  display: none;
 }
 
 .category-block {
-    background-color: #f5f5f5;
-    padding: 0 0.5rem 0 0.5rem;
+  padding: 0 0.5rem 0 0.5rem;
 }
 
+@media screen and (max-width: 768px) {
+  .woocommerce ul.products[class*="columns-"] li.product,
+  .woocommerce-page ul.products[class*="columns-"] li.product {
+    margin: 0.5rem 0;
+  }
+  /* Ajustar o contêiner dos produtos para permitir rolagem horizontal */
+  .woocommerce.columns-4 .products {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    gap: 1.5rem;
+  }
+
+  /* Estilizar a barra de rolagem em navegadores WebKit (Chrome, Safari, etc.) */
+  .woocommerce.columns-4 .products::-webkit-scrollbar {
+    height: 5px; /* Altura da barra de rolagem */
+  }
+
+  .woocommerce.columns-4 .products::-webkit-scrollbar-track {
+    background: transparent; /* Fundo do trilho da barra */
+  }
+
+  .woocommerce.columns-4 .products::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.3); /* Cor da barra */
+    border-radius: 5px; /* Arredondar cantos da barra */
+  }
+
+  /* Estilizar a barra de rolagem no Firefox */
+  .woocommerce.columns-4 .products {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+
+    box-sizing: border-box;
+  }
+
+  /* Ajustar os produtos para alinhamento correto */
+  .woocommerce.columns-4 .products .product {
+    flex: 0 0 auto;
+    flex-shrink: 0; /* Impede que os cards encolham */
+    min-width: 75%; /* Define uma largura mínima */
+
+    box-sizing: border-box; /* Garante que padding e border sejam incluídos na largura total */
+  }
+
+  /* Centralizar o título da categoria */
+  .category-block h1 {
+    text-align: center;
+    margin-left: 0;
+  }
+
+  /* Ajustar margens e paddings */
+  .woocommerce.columns-4 {
+    padding: 1rem 0;
+  }
+
+  /* Ajustar tamanho das imagens */
+  .woocommerce.columns-4 .products .product img {
+    width: 100%;
+    margin-top: 0;
+  }
+
+  /* Ajustar texto do título do produto */
+  .woocommerce ul.products li.product .woocommerce-loop-product__title {
+    font-size: 1rem;
+    margin: 0.5rem 0;
+    text-align: center;
+  }
+
+  /* Ajustar preço */
+  .woocommerce ul.products li.product .price {
+    margin-left: 0;
+    text-align: center;
+  }
+}
