--- a/css/header.css
+++ b/css/header.css
@@ -1,157 +1,151 @@
-
 .header-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    background-color: #232F3E;
-    border-bottom: 0.4vh solid;
-    height: 7rem;
-    color: #fff;
-    border-image: linear-gradient(to right, yellow, red, blue) 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background-color: #232f3e;
+  border-bottom: 0.4vh solid;
+  height: 7rem;
+  color: #fff;
+  border-image: linear-gradient(to right, yellow, red, blue) 1;
 }
 
 .main-menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100rem;
-    max-width: 100%;
-    font-weight: 800;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100rem;
+  max-width: 100%;
+  font-weight: 800;
 }
 
 .header-left img {
-    max-width: 12rem;
+  max-width: 12rem;
 }
 
 .header-center nav ul {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .header-center nav ul li {
-    margin: 0 15px;
+  margin: 0 15px;
 }
 
 .header-center nav ul li a {
-    text-decoration: none;
-    color: inherit;
-    font-weight: 700;
-    font-size: large;
+  text-decoration: none;
+  color: inherit;
+  font-weight: 700;
+  font-size: large;
 }
 
 .header-right {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .header-right .search-form {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .header-right .search-field {
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
 }
 
 .header-right .search-submit {
-    background: #ffffff50;
-    border: none;
-    color: white;
-    cursor: pointer;
-    margin-left: 5px;
-    padding: 0;
+  background: #ffffff50;
+  border: none;
+  color: white;
+  cursor: pointer;
+  margin-left: 5px;
+  padding: 0;
 }
 
 .header-right .cart-button {
-    display: flex;
-    align-items: end;
-    margin-left: 15px;
-    text-decoration: none;
-    color: #fff;
-    position: relative;
+  display: flex;
+  align-items: end;
+  margin-left: 15px;
+  text-decoration: none;
+  color: #fff;
+  position: relative;
 }
 
 .header-right .cart-button span {
-    padding-left: 0.35rem;
+  padding-left: 0.35rem;
 }
 
 .header-right .cart-button .fa-shopping-cart {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 .header-right .cart-count {
-    font-size: 1rem;
-    background-color: #0000ff;
-    color: white;
-    border-radius: 100%;
-    min-width: 1.5rem;
-    font-weight: 600;
-    position: absolute;
-    left: 1rem;
-    bottom: 1rem;
-    padding:  0.1rem 0.2rem;
-    text-align: center;
-    align-content: center;
+  font-size: 1rem;
+  background-color: #0000ff;
+  color: white;
+  border-radius: 100%;
+  min-width: 1.5rem;
+  font-weight: 600;
+  position: absolute;
+  left: 1rem;
+  bottom: 1rem;
+  padding: 0.1rem 0.2rem;
+  text-align: center;
+  align-content: center;
 }
-
 
 /* Estilos responsivos para dispositivos móveis */
 @media (max-width: 802px) {
+  .header-left {
+    order: 2;
+  }
 
-    .header-left {
-        order: 2;
-    }
+  .header-center {
+    order: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
+  .header-center nav {
+    display: none;
+  }
 
-    .header-center {
-        order: 1;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+  .header-center .menu-toggle {
+    display: block;
+    cursor: pointer;
+    font-size: 24px;
+  }
 
-    .header-center nav {
-        display: none;
-    }
+  .header-right .search-form {
+    display: none;
+  }
 
-    .header-center .menu-toggle {
-        display: block;
-        cursor: pointer;
-        font-size: 24px;
-    }
-
-    .header-right .search-field {
-        display: none;
-    }
-
-    .header-right .search-submit {
-        display: flex;
-        align-items: center;
-        font-size: 24px;
-    }
-    .header-right {
+  .header-right {
     order: 3;
-    }
+  }
+
+  .cart-message {
+    display: none;
+  }
 }
 
 /* Estilos para o menu hamburger */
 @media (min-width: 803px) {
-.header-center .menu-toggle {
+  .header-center .menu-toggle {
     display: none;
-}
+  }
 }
 .header-center nav.active {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header-center .main-menu li {
-    margin: 10px 0;
+  margin: 10px 0;
 }
-
